--- a/styles.css
+++ b/styles.css
@@ -2,54 +2,30 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-.contact_us {
-    margin: 20px 0 0 20px;
-    color: black;
-    font-size: 30px;
-}
-
-input,div {
-    border-radius: 5px;
 }
 
 body {
-    background-color: rgb(200, 200, 246)    ;
+    margin: 130px 200px 100px 500px;
 }
 
-#container { 
-    display: inline-block;
-    margin: 50px 100px 100px 450px;
-    width: 400px;
-    height: 500px;
-    border-radius: 10px;
-    background: whitesmoke;
-    padding: 10px 10px 0 10px;
-    border: 1px solid black;
+section {
+    display: flex;
+    width: 600px;
+    height: 430px;
 }
 
-.titulo {
-    color: whitesmoke;
+section img {
+    width: 0;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .9;
+    transition: .8s ease;
+    text-align: center;
 }
 
-.subtitulo {
-    color: whitesmoke;
+section img:hover {
+    cursor: crosshair;
+    width: 300px;
+    opacity: 1;
+    filter: contrast(120%);
 }
-
-.box {
-    height: 25px;
-    width: 100px;
-    display: inline-block;
-    border: 1px solid black ;
-    margin: 10px;
-}
-
-.text {
-    /* display: inline-block; */
-    margin: 5px;
-} 
-
-
-
